syntax = "proto3";

package go_serv.net;

message Ftp {
  //
  enum TransferState {
    IN_PROGRESS = 0;
    COMPLETED = 1;
    SUSPENDED = 2;
    FAILED = 3;
  }
  message FileInfo {
    // Relative pathname to the target dir.
    string target_pathname = 1;
    // File size.
    uint64 size = 2;
    // Original filename.
    string original_filename = 3;
    // Absolute pathname of the file on client side, optional for the Web browser clients.
    optional string abs_pathname = 4;
    // File MIME type. Empty if can't be determined.
    optional string mime_type = 5;
  }
  //
  message FileDescriptor {
    fixed64 handle = 1;
    FileInfo info = 2;
  }
  //
  message FileRange {
    uint64 low = 1;
    uint64 high = 2;
  }
  //
  message NewSession {
    message Request {
      repeated FileInfo files = 1;
      optional string target_dir = 2;
    }
    message Response {
      uint32 max_chunk_size = 1;
      repeated FileDescriptor descriptors = 2;
    }
  }
  //
  message FileChunk {
    message Request {
      FileRange range = 1;
      fixed64 file_handle = 2;
      bytes body = 3;
    }
    message Response {
    }
  }
  //
  message PendingChunks {
    fixed64 file_handle = 1;
    repeated FileRange ranges = 2;
  }
  message Inquiry {
    message Request {
      fixed64 transfer_sess_id = 1;
    }
    message Response {
      TransferState state = 1;
      repeated FileDescriptor fds = 2;
      repeated PendingChunks chunks = 3;
    }
  }
}